Better detection of write problems.

Check results when writing zip files in XMLDB::NumberedBackup.
Check results when using QFile IO in XMLDB::Filewriter and
AnnotationDialog::Dialog.

BUG: 157100