AnnotationDialog/Dialog.cpp
@@ -628,8 +628,20 @@ void AnnotationDialog::Dialog::slotSaveWindowSetup()
     const QByteArray data = _dockWindow->saveState();
 
     QFile file( QString::fromLatin1( "%1/layout.dat" ).arg( Settings::SettingsData::instance()->imageDirectory() ) );
-    file.open( QIODevice::WriteOnly );
-    file.write( data );
+    if ( !file.open( QIODevice::WriteOnly ) ) {
+		KMessageBox::sorry( this, 
+				i18n("<p>Could not save the window layout.</p>"
+					"File %1 could not be opened because of the following error: %2"
+					, file.fileName(), file.errorString() ) 
+				);
+	} else if ( ! ( file.write( data ) && file.flush() ) )
+	{
+		KMessageBox::sorry( this, 
+				i18n("<p>Could not save the window layout.</p>"
+					"File %1 could not be written because of the following error: %2"
+					, file.fileName(), file.errorString() ) 
+				);
+	}
     file.close();
 }
 
